* fixes inputs being collapsed on focus, on the docs page

--- a/packages/ui-library/src/components/input/input.module.scss
+++ b/packages/ui-library/src/components/input/input.module.scss
@@ -106,6 +106,7 @@
       visibility: hidden;
       border: none;
       min-height: 2.1875rem;
+      box-sizing: content-box;
 
       .legend {
         visibility: hidden;
